Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112706

skinningPalette uniform is not uploaded to shaders in the Qt 3D RHI backend

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.7.0 FF
    • 6.5.0
    • Qt3D
    • None
    • All
    • 378474338 (dev)

    Description

      Using Qt 3D with QML. Seems like the uniform "skinningPalette" is not uploaded to the vertex shader when using the RHI backend. I found no reference to it in the source code for the RHI renderer (https://code.qt.io/cgit/qt/qt3d.git/tree/src/plugins/renderers/rhi/renderer/renderview.cpp#n1041), even though documentation online says this uniform should exist, and there's no mention of armature animations only being supported on OpenGL.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            seanharmer Sean Harmer
            glorantv Lóránt Viktor Gerber
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes