Upload skinningPalette uniform to shaders with the RHI backend

Previously, the skinningPalette uniform wasn't uploaded to shaders with
the RHI backend of Qt 3D, so I added it to the command UBO. This patch
is the first step towards armature animations working both with OpenGL
and RHI.

Fixes: QTBUG-112706
Change-Id: Ic2d57e88df2460d2e2b50b9479b4be9628f21b10
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>