src/plugins/renderers/rhi/renderer/rendercommand_p.h
@@ -57,8 +57,9 @@ struct CommandUBO
     float mvp[16];
     float inverseModelViewProjectionMatrix[16];
     float modelViewNormalMatrix[12];
+    float skinningPalette[100 * 16];
 };
-static_assert(sizeof(CommandUBO) == 6 * (16 * sizeof(float)) + 2 * (12 * sizeof(float)),
+static_assert(sizeof(CommandUBO) == 6 * (16 * sizeof(float)) + 2 * (12 * sizeof(float)) + 100 * (16 * sizeof(float)),
               "UBO doesn't match std140");
 
 struct Q_AUTOTEST_EXPORT AttributeInfo
